--- a/templates/header.phtml
+++ b/templates/header.phtml
@@ -1,9 +1,10 @@
+<?php require_once 'config.php'?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="<?php echo BASE_URL?>"/>
+    <base href="<?= BASE_URL ?>">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -17,6 +18,11 @@
                 <li><a href="home">Home</a></li>
                 <li><a href="productos">Productos</a></li>
                 <li><a href="about">Sobre Nosotros</a></li>
+                <?php if(!isset($_SESSION['logueado'])){ ?>
+                <li><a href="login">Login</a></li>
+                <?php } else { ?>
+                <li><a href="logout">Logout</a></li>
+                <?php } ?>
             </ul>
         </nav>
     </header>
